add config menu

--- a/Application/Plotter Gui Application/imgui.ini
+++ b/Application/Plotter Gui Application/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Serial connection]
-Pos=149,128
-Size=481,310
+Pos=60,57
+Size=325,217
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,8 +15,16 @@ Size=268,185
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Machine config]
+Pos=60,276
+Size=325,107
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=149,128 Size=481,310 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=357,211 Selected=0x790E5CCE
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=357,258 Selected=0xEB7D4045
+DockNode      ID=0x00000001 Pos=60,57 Size=325,326 Split=Y
+  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=306,144 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=357,211 Selected=0x790E5CCE
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=357,258 Selected=0xEB7D4045
+  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=306,71 Selected=0x9FD57909
 
