--- a/Application/Plotter Gui Application/Plotter Gui Application.vcxproj
+++ b/Application/Plotter Gui Application/Plotter Gui Application.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="BaseClasses.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Common.h" />
+    <ClInclude Include="Globals.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="fullScreenVert.glsl" />
     <ClInclude Include="InputHandler.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Arm.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Linkage.cpp" />
