--- a/Application/Plotter Gui Application/Plotter Gui Application.vcxproj.filters
+++ b/Application/Plotter Gui Application/Plotter Gui Application.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="SceneController.h">
       <Filter>Plotter\Header Files\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="Globals.h">
+      <Filter>Plotter\Header Files\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Arm.cpp">
@@ -242,6 +245,9 @@
       <Filter>Plotter\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SceneController.cpp">
+      <Filter>Plotter\Source Files\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Globals.cpp">
       <Filter>Plotter\Source Files\Objects</Filter>
     </ClCompile>
   </ItemGroup>
