--- a/Application/Plotter Gui Application/imgui.ini
+++ b/Application/Plotter Gui Application/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Serial connection]
-Pos=60,57
-Size=325,217
+Pos=-1,21
+Size=210,128
 Collapsed=0
 DockId=0x00000002,0
 
@@ -16,15 +16,36 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Machine config]
-Pos=60,276
-Size=325,107
+Pos=-1,151
+Size=210,132
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Incoming data]
+Pos=434,447
+Size=1144,365
+Collapsed=0
+
+[Window][Motor config]
+Pos=-1,285
+Size=210,258
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Objects]
+Pos=211,21
+Size=208,522
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=60,57 Size=325,326 Split=Y
-  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=306,144 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=357,211 Selected=0x790E5CCE
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=357,258 Selected=0xEB7D4045
-  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=306,71 Selected=0x9FD57909
+DockNode          ID=0x00000001 Pos=-1,21 Size=420,522 Split=X
+  DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=236,639 Split=Y
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=254,163 Split=Y
+      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=306,160 Split=Y
+        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=357,211 Selected=0x790E5CCE
+        DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=357,258 Selected=0xEB7D4045
+      DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=306,166 Selected=0x9FD57909
+    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=254,161 Selected=0x71F2CDDA
+  DockNode        ID=0x00000009 Parent=0x00000001 SizeRef=234,639 Selected=0x967E7699
 
